          obscure the mouse cursor position.
	- replaced callback.h by a fixed version from gvpe that correctly
          returns the callback result (affects new -pty-fd semantics in urxvtc
          on a few architectures). Reported by darix.
        - include one trailing space in rectangular selections to indicate
          the inserted newline (yeah, weird, but visually more pleasing).
        - further minor cleanups.

6.1  Tue Dec 27 13:23:40 CET 2005
	- update iso8859-7 table (euro and drachma round-trip et al.).
	- fix a crash when the selection scrolls out of the scrollback
          while the user still drags.
        - selections that were partially scrolled out of the window were
          not drawn correctly.
        - lines newly scrolled in were not initialized properly, leading
          to extremely long lines and (hopefully) some segfaults.
        - iso14755 overlay position was wrong.
        - iso14755 overlay now displays rendition info, too.
        - use unicode white space class instead of hardcoded values for
          stripping whitespace.
        - do whitespace stripping on rectangular selections.
        - slight cleanups in src/features.h.

6.0  Sat Dec 24 13:58:56 CET 2005
	- make it compile without SMART_RESIZE again.
        - enable slow link support by default.
        - fix relative cursor-positioning not respecting scrolling regions
          (also a bug in original rxvt).
        - initialize termios structure to zero when fetching it fails
          (see http://www.freebsd.org/cgi/query-pr.cgi?pr=84647 for a
          partial patch).
        - bump max columns/rows to 10000 each.
        - bump max savelines to 10000000.
        - -pty-fd now passes the urxvtc fd to the urxvtd process.
        - avoid linking against -lnsl/-lsocket/-lxpg4 unless neccessary.
        - major code cleanup (still not complete, though).
        - implement -hold option.
        - _major_ rewrite of internal buffer handling: